SCRUM-112 Сохранение изображений на сервере
