# src/main/java/ru/visionary/mixing/mind_broker/entity/Image.java
@@ -1,0 +1,22 @@
+package ru.visionary.mixing.mind_broker.entity;
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+
+import java.time.LocalDateTime;
+import java.util.UUID;
+
+@Getter
+@Setter
+@NoArgsConstructor
+@AllArgsConstructor
+@Builder
+public class Image {
+    private UUID id;
+    private User owner;
+    private Protection protection;
+    private LocalDateTime createdAt;
+}
